tests/snapshots/examples_fixtures/type_system__failing__16_inferred_effect_missing_on_typed_caller.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/16_inferred_effect_missing_on_typed_caller.flx
== compile ==
failed (compile)
== diagnostics ==
error[E400]: Missing Effect

requires effect `IO` but the enclosing context does not provide it

  examples/type_system/failing/16_inferred_effect_missing_on_typed_caller.flx:8:5
  |
8 |     sink("hello")
  |     ^^^^^^^^^^^^^
  |     ------------- requires `IO`

Hint:
  annotate the enclosing function with `with IO`


error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: Time).

  examples/type_system/failing/16_inferred_effect_missing_on_typed_caller.flx:12:1
   |
12 | typed_time_only()
   | ^^^^^^^^^^^^^^^^^
   | ----------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


error[E414]: Missing Main Function

Effectful program is missing `fn main` root effect handler.

  examples/type_system/failing/16_inferred_effect_missing_on_typed_caller.flx:12:1
   |
12 | typed_time_only()
   | ^^^^^^^^^^^^^^^^^
   | ----------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


error[E400]: Missing Effect

requires effect `Time` but the enclosing context does not provide it

  examples/type_system/failing/16_inferred_effect_missing_on_typed_caller.flx:12:1
   |
12 | typed_time_only()
   | ^^^^^^^^^^^^^^^^^
   | ----------------- requires `Time`

Hint:
  annotate the enclosing function with `with Time`


Warning: missing CFG bytecode binding for IR call dest


Found 4 errors and 1 warning.
== stdout ==
<not executed>
